@@ -1,7 +1,17 @@
+2007-03-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b54
+
+ * Fix: Htmlfix in b53 broke image area links.
+
+   Thanks again to Ajuniper.
+
+ * Fix: No empty tooltip if no hovertext is given.
+
 2007-03-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b53
 
-* Fix: Quotes (single and double) and backslash were not quoted in
+ * Fix: Quotes (single and double) and backslash were not quoted in
         imagemap.
+
+ Thanks to Ajuniper from Forum.
 
  * Fix: Little HTML fixes in imagemap.
 
